[package]
name = "splash"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
build = "build.rs"

[build-dependencies]
clap = "2.23"

[workspace]

[dependencies]
splash-rs = {version = "*", path="lib/"}
hyper-rustls = "0.14"
hyper = {version = "0.12", default-features = false, features = []}
tokio = "0.1"
wallpaper = "1.0"
clap = "2.23"
failure = "0.1"
futures = "0.1"
log = "0.4"
flexi_logger = "0.9"
